# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "runpod-sdk"
description = "RunPod SDK for Rust"
readme = "./README.md"

version = "0.1.0"
rust-version = "1.89"
edition = "2024"
license = "MIT"
publish = false

authors = [
    "Oleh Martsokha <o.martsokha@gmail.com>",
    "Patrick Barker <https://github.com/pbarker> (Original author)"
]
repository = "https://github.com/martsokha/runpod"
homepage = "https://github.com/martsokha/runpod"
documentation = "https://docs.rs/runpod-sdk"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
## Default features enabled by default
default = ["rustls-tls"]

## Enable rustls-tls for HTTPS requests (default)
rustls-tls = ["reqwest/rustls-tls"]

## Enable native-tls for HTTPS requests
native-tls = ["reqwest/native-tls"]

## Enable tracing support for HTTP requests and client operations
tracing = ["dep:tracing"]

## Enable string conversions for enums via strum derive macros
strum = ["dep:strum"]

## Enable GraphQL support
graphql = ["dep:serde_json"]

## Enable serverless runner support
serverless = ["dep:serde_json", "dep:pin-project-lite"]

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json"], default-features = false }
pin-project-lite = { version = "0.2", optional = true }

# (De)serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [], optional = true }

# Observability
tracing = { version = "0.1", features = [], optional = true }

# Derive macros & utilities
thiserror = { version = "2.0", features = [] }
strum = { version = "0.27", features = ["derive"], optional = true }
derive_builder = { version = "0.20", features = [] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "run_endpoint"
required-features = ["serverless"]
